# octotree_light

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  bitbucket-pipelines.yml  package.xml
se_apps/: CMakeLists.txt
se_apps/include/: default_parameters.h  draw.h  filesystem.hpp  interface.h  reader_base.hpp  reader_newercollege.hpp
se_apps/qt/: ApplicationWindow.cpp  ApplicationWindow.h  MainWindow.cpp  MainWindow.h  QtGUI.cpp
se_apps/scripts/: _run.py  run_kf.py
se_apps/src/: PowerMonitor.cpp  benchmark.cpp  main.cpp  mainQt.cpp  reader.cpp  reader_base.cpp  reader_iclnuim.cpp  voxel_size.cpp
se_apps/test/: CMakeLists.txt
se_apps/test/reader_iclnuim/: CMakeLists.txt  reader_iclnuim_unittest.cpp
se_apps/test/reader_openni/: CMakeLists.txt  reader_no_openni_unittest.cpp
se_apps/test/reader_raw/: CMakeLists.txt  reader_raw_unittest.cpp
se_core/: CMakeLists.txt
se_core/include/se/: node.hpp  node_impl.hpp  node_iterator.hpp  octant_ops.hpp  octree.hpp  octree_defines.h  octree_impl.hpp  octree_iterator.hpp  octree_iterator_impl.hpp  ray_iterator.hpp  volume.hpp  volume_impl.hpp  voxel_block_ray_iterator.hpp  voxel_type_example.hpp
se_core/include/se/algorithms/: balancing.hpp  edge_tables.hpp  filter.hpp  mapping.hpp  meshing.hpp  unique.hpp
se_core/include/se/continuous/: volume_template.hpp
se_core/include/se/functors/: axis_aligned_functor.hpp  data_handler.hpp  projective_functor.hpp
se_core/include/se/geometry/: aabb_collision.hpp  octree_collision.hpp
se_core/include/se/interpolation/: idw_interpolation.hpp  interp_gather.hpp  interp_multires_gather.hpp
se_core/include/se/io/: meshing_io.hpp  meshing_io_impl.hpp  octomap_io.hpp  octomap_io_impl.hpp  octree_io.hpp  octree_io_impl.hpp  ply_io.hpp  point_cloud_io.hpp  point_cloud_io_impl.hpp  se_serialise.hpp  vtk-io.h
se_core/include/se/utils/: math_utils.h  memory_pool.hpp
se_core/test/: CMakeLists.txt
se_core/test/algorithms/: CMakeLists.txt  meshing_unittest.cpp  unique_unittest.cpp
se_core/test/allocation/: CMakeLists.txt  alloc_unittest.cpp
se_core/test/functor/: CMakeLists.txt  axisaligned_unittest.cpp
se_core/test/geometry/: CMakeLists.txt  aabb_collision_unittest.cpp  octree_collision_unittest.cpp
se_core/test/interp/: CMakeLists.txt  gather_unittest.cpp  interpolation_unittest.cpp
se_core/test/io/: CMakeLists.txt  io_unittest.cpp  octomap_io_unittest.cpp
se_core/test/iterator/: CMakeLists.txt  iterator_unittest.cpp
se_core/test/multiscale/: CMakeLists.txt  multiscale_unittest.cpp
se_core/test/neighbors/: CMakeLists.txt  neighbor_gather_unittest.cpp
se_core/test/node/: CMakeLists.txt  node_unittest.cpp  voxelblock_common_unittest.cpp
se_core/test/octree/: CMakeLists.txt  octree_unittest.cpp  ray_iterator_unittest.cpp  voxel_block_ray_iterator_unittest.cpp  voxel_block_unittest.cpp
se_core/test/utils/: CMakeLists.txt  math_unittest.cpp  morton_unittest.cpp
se_denseslam/: CMakeLists.txt
se_denseslam/include/se/: DenseSLAMSystem.h  commons.h  config.h  constant_parameters.h  preprocessing.hpp  rendering.hpp  tracking.hpp  volume_traits.hpp  voxel_implementations.hpp  voxel_implementations.hpp.in
se_denseslam/include/se/continuous/: volume_template.hpp
se_denseslam/src/: DenseSLAMSystem.cpp  preprocessing.cpp  rendering.cpp  tracking.cpp
se_denseslam/src/bfusion/: rendering_impl.hpp
se_denseslam/src/kfusion/: rendering_impl.hpp
se_denseslam/src/multires/: mapping_impl.hpp  rendering_impl.hpp
se_denseslam/test/: CMakeLists.txt
se_denseslam/test/multiscale_esdf_moving_sphere/: CMakeLists.txt  esdf_moving_sphere_unittest.cpp
se_denseslam/test/multiscale_tsdf_moving_camera/: CMakeLists.txt  tsdf_moving_camera_unittest.cpp
se_denseslam/test/preprocessing/: CMakeLists.txt  preprocessing_unittest.cpp
se_shared/: CMakeLists.txt
se_shared/cmake/: SESharedConfig.cmake.in
se_shared/include/se/: filter.hpp  image_utils.hpp  perfstats.h  perfstats_impl.hpp  point_cloud_utils.hpp  projective_functor.hpp  sensor.hpp  str_utils.h  str_utils.hpp  system_info.hpp  timings.h
se_shared/include/se/image/: image.hpp
se_shared/src/: image_utils.cpp  point_cloud_utils.cpp  sensor.cpp  stats.cpp  str_utils.cpp
se_shared/test/: CMakeLists.txt
se_shared/test/image/: CMakeLists.txt  image_unittest.cpp
se_shared/test/image_utils/: CMakeLists.txt  image_utils_io_unittest.cpp  image_utils_unittest.cpp
se_tools/: CMakeLists.txt  install_dependencies.sh  oni2raw.cpp  plot_stats.py  scene2raw.cpp  tiny_obj_loader.h
se_tools/benchmark_scripts/: _benchmark_base.py  _common.py  _config.py  _dataset.py  _progress_bar.py  _run.py  _sequence.py  _test_case.py  benchmark.py  datasets.py  evaluate_ate.py  plot_stats.py  result_summary.py  run_benchmark.py  systemsettings.py
se_tools/evaluation_scripts/: README.md  TODO.md  _dataset.py  _run.py  _util.py  datasets.py  download_datasets.sh  evaluate_rpe.py  run_benchmarks.py  run_kf.py  systemsettings.py
se_voxel_impl/: CMakeLists.txt  README.md
se_voxel_impl/include/se/: common.hpp  sensor_implementation.hpp
se_voxel_impl/src/ExampleVoxelImpl/: ExampleVoxelImpl.cpp
se_voxel_impl/src/MultiresTSDF/: MultiresTSDF.cpp  MultiresTSDF_allocation.cpp  MultiresTSDF_mapping.cpp  MultiresTSDF_rendering.cpp
se_voxel_impl/src/OFusion/: OFusion.cpp  OFusion_allocation.cpp  OFusion_mapping.cpp  OFusion_rendering.cpp
se_voxel_impl/src/TSDF/: TSDF.cpp  TSDF_allocation.cpp  TSDF_mapping.cpp  TSDF_rendering.cpp
se_voxel_impl/test/: CMakeLists.txt
se_voxel_impl/test/multires_esdf_moving_sphere/: CMakeLists.txt  esdf_moving_sphere_unittest.cpp
se_voxel_impl/test/multires_tsdf_moving_camera/: CMakeLists.txt  tsdf_moving_camera_unittest.cpp
se_voxel_impl/test/multiscale_esdf_moving_sphere/: CMakeLists.txt  esdf_moving_sphere_unittest.cpp
se_voxel_impl/test/multiscale_tsdf_moving_camera/: tsdf_moving_camera_unittest.cpp
test/test_install/: CMakeLists.txt  lodepng_install_test.cpp  se_core_install_test.cpp  se_denseslam_install_test.cpp  se_shared_install_test.cpp
(+50 files in other folders)
