<?xml version="1.0"?>
<package format="2">
  <name>supereight</name>
  <version>0.0.1</version>
  <description>SuperEight</description>

  <author email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</author>
  <maintainer email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</maintainer>

  <license>BSD</license>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
